# localvily

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: ci.yml  publish-extension.yml  publish.yml
adapters/: storm.py
adapters/tests/: test_storm.py
docs/: privacy-policy.md
docs/superpowers/plans/: 2026-06-20-browser-relay-mcp-phase1-relay-backend.md  2026-06-20-browser-relay-mcp-phase2-chrome-extension.md  2026-06-20-browser-relay-mcp-phase3-escalation.md  2026-06-20-browser-relay-mcp-phase4-cloak-driver.md  2026-06-20-browser-relay-mcp-phase5-packaging.md
docs/superpowers/specs/: 2026-06-20-browser-relay-search-fetch-mcp-design.md
extension/: background.js  build-inject.mjs  extract.js  inject-bundle-note.md  manifest.json  options.html  options.js  popup.css  popup.html  popup.js
extension/engines/: bing.js  index.js
extension/inject/: extract.js  serp.js
extension/tests/: bing.test.mjs  extract.test.mjs  inject-build.test.mjs  login.test.mjs  registry.test.mjs  smoke.test.mjs
scripts/: package-extension.sh
server/: pyproject.toml  sync_shared_js.py
server/browser_relay/: app.py
server/browser_relay/drivers/: cloak.py
server/browser_relay/mcp_server/: server.py
server/tests/: conftest.py  test_cloak_driver.py  test_cloak_lifespan.py  test_cloak_profile_dir.py  test_cloak_routing.py  test_dispatch.py  test_escalation.py  test_health.py  test_mcp_tools.py  test_resume_tool.py  test_roundtrip.py  test_search_and_fetch.py  test_shared_js_packaging.py
tests/acceptance/: README.md  run_acceptance.py
(+3 files in other folders)
