[project]
name = "browser-relay-mcp"
version = "0.1.0"
description = "Unlimited, session-authenticated web search & fetch via the user's browser, behind an MCP server"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "httpx>=0.27",
    "mcp>=1.2",
    "patchright>=1.40",
]

[project.scripts]
browser-relay-mcp = "browser_relay.mcp_server.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["browser_relay"]

[dependency-groups]
dev = ["pytest>=8", "pytest-asyncio>=0.23"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
